k8s/pod-network-multitool.yaml
cat apiVersion: v1
kind: Pod
metadata:
  name: network-multitool
spec:
  shareProcessNamespace: true  
  containers:
  - name: network-multitool
    image: wbitt/network-multitool
